PN-19623: implemented getMessages
