# docs/openapi/pn-io-connector-internal.yaml
@@ -97,8 +97,8 @@ paths:
       summary: Recupero metadati allegati di un messaggio
       description: >
         Endpoint invocato da BackEnd IO quando l'utente apre il dettaglio del messaggio
-        su App IO. Viene verificato che il codice fiscale del destinatario 
-        sia coerente con quello associato al messaggio, richiesta a SafeStorage 
+        su App IO. Viene verificato che il codice fiscale del destinatario
+        sia coerente con quello associato al messaggio, richiesta a SafeStorage
         una PresignedUri per ciascun allegato e restituita una lista di metadati che
         potrà essere usata dal client App IO per richiedere il contenuto binario.
       operationId: getMessage
@@ -108,7 +108,60 @@ paths:
           required: true
           schema:
             type: string
-          description: Identificativo del messaggio su IO (ioMessageId).
+          description: requestId — identificativo di correlazione remota passato da pn-io-connector in third_party_data.id al momento dell'invio del messaggio
+        - name: fiscal_code
+          in: header
+          required: true
+          schema:
+            type: string
+            minLength: 16
+            maxLength: 16
+          description: Codice fiscale del destinatario inviato da Backend IO
+        - name: x-pagopa-lollipop-original-method
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-original-url
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: signature-input
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: signature
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-assertion-ref
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-assertion-type
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-auth-jwt
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-public-key
+          in: header
+          required: false
+          schema:
+            type: string
+        - name: x-pagopa-lollipop-user-id
+          in: header
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: Metadati degli allegati associati al messaggio.
