# src/main/java/it/pagopa/pn/ioconnector/rest/IOController.java
@@ -1,24 +1,36 @@
 package it.pagopa.pn.ioconnector.rest;
 
+import it.pagopa.pn.ioconnector.generated.openapi.server.v1.api.DefaultApi;
 import it.pagopa.pn.ioconnector.generated.openapi.server.v1.api.IoApi;
+import it.pagopa.pn.ioconnector.generated.openapi.server.v1.dto.GetMessageResponse;
 import it.pagopa.pn.ioconnector.generated.openapi.server.v1.dto.GetProfileRequest;
 import it.pagopa.pn.ioconnector.generated.openapi.server.v1.dto.GetProfileResponse;
 import it.pagopa.pn.ioconnector.generated.openapi.server.v1.dto.MessageRequest;
 import it.pagopa.pn.ioconnector.generated.openapi.server.v1.dto.MessageResponse;
+import it.pagopa.pn.ioconnector.service.io.GetMessageService;
 import it.pagopa.pn.ioconnector.service.io.MessageService;
 import it.pagopa.pn.ioconnector.service.io.ProfileService;
 import lombok.CustomLog;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.context.request.NativeWebRequest;
+
+import java.util.Optional;
 
 @CustomLog
 @RestController
 @RequiredArgsConstructor
-public class IOController implements IoApi {
+public class IOController implements IoApi, DefaultApi {
 
     private final MessageService messageService;
     private final ProfileService profileService;
+    private final GetMessageService getMessageService;
+
+    @Override
+    public Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
 
     @Override
     public ResponseEntity<MessageResponse> sendIOMessage(String xPagopaIoConCxId, MessageRequest messageRequest) {
@@ -31,5 +43,10 @@ public class IOController implements IoApi {
     @Override
     public ResponseEntity<GetProfileResponse> getIOProfile(String xPagopaIoConCxId, GetProfileRequest request) {
         return ResponseEntity.ok(profileService.getProfile(request));
+    }
+
+    @Override
+    public ResponseEntity<GetMessageResponse> getMessage(String id, String fiscalCode, String xPagopaLollipopOriginalMethod, String xPagopaLollipopOriginalUrl, String signatureInput, String signature, String xPagopaLollipopAssertionRef, String xPagopaLollipopAssertionType, String xPagopaLollipopAuthJwt, String xPagopaLollipopPublicKey, String xPagopaLollipopUserId) {
+        return ResponseEntity.ok(getMessageService.getMessageDetails(id, fiscalCode));
     }
 }
